# pyoptional

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
joptional/: optional.py
pyoptional/: __init__.py  optional.py
python-optional/: optional.py
test/: test_optional.py
